--- a/index.html
+++ b/index.html
@@ -1,55 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Web Design & Pseudo-classes</title>
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-  <header class="header">
-    <div>
-      <h1>Responsive Web Design</h1>
-
-
+<section id="projects">
+  <h2>My Projects</h2>
+  <div class="projects-grid">
+    <!-- Project 1 -->
+    <div class="project-card">
+      <img src="assets/Snapshoot Portfolio.png" alt="Snapshoot Portfolio">
+      <h3>Snapshoot Portfolio</h3>
+      <p>A project showcasing a responsive portfolio site design using HTML, CSS, and JavaScript.</p>
     </div>
-    <nav class="nav">
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <!-- Project 2 -->
+    <div class="project-card">
+      <img src="assets/orange-project.png" alt="Orange Project">
+      <h3>Orange Project</h3>
+      <p>A vibrant website designed to highlight creative work, with a focus on modern UI/UX elements.</p>
+    </div>
+  </div>
+</section>
 
-  <section class="hero">
-    <h2>Welcome to Responsive Design</h2>
-    <p>Resize the window to see the layout change!</p>
-    <button class="cta-button">Learn More</button>
-  </section>
+<section id="skills">
+  <h2>Skills</h2>
+  <div class="skills-grid">
+    <!-- Skills Icons -->
+    <img src="assets/Javascript_ellipse 1.png" alt="JavaScript" class="skill-icon">
+    <img src="assets/html_ellipse 1.png" alt="HTML" class="skill-icon">
+    <img src="assets/cssecllipse.png" alt="CSS" class="skill-icon">
+  </div>
+</section>
 
-  <section class="cards">
-    <div class="card">
-      <h3>HTML</h3>
-      <p>Learn the basics of HTML.</p>
-    </div>
-    <div class="card">
-      <h3>CSS</h3>
-      <p>Style your web pages with CSS.</p>
-    </div>
-    <div class="card">
-      <h3>JavaScript</h3>
-      <p>Add interactivity to your site.</p>
-    </div>
-    <div class="card">
-      <h3>PHP</h3>
-      <p>Add interactivity to your site.</p>
-    </div>
-  </section>
-
-  <footer class="footer">
-    <p>&copy; 2024 Responsive Web Design Tutorial</p>
-  </footer>
-</body>
-</html>
